--- a/public/views/report.html
+++ b/public/views/report.html
@@ -24,6 +24,15 @@
             <label for="time">Time:</label>
             <input type="time" id="time" name="time" required>
 
+            <label for="tags">Tags:</label>
+            <div id="tags">
+                <input type="checkbox" name="tags" value="Electronics"> Electronics
+                <input type="checkbox" name="tags" value="Clothing"> Clothing
+                <input type="checkbox" name="tags" value="Accessories"> Accessories
+                <input type="checkbox" name="tags" value="Books"> Books
+                <input type="checkbox" name="tags" value="Personal Items"> Personal Items
+            </div>
+
             <label for="image">Image (optional):</label>
             <input type="file" id="image" name="image" accept="image/*">
 
