--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,6 +16,9 @@
             <a class="button" href="/report?type=found">Report Found Item</a>
             <a class="button" href="/items">View All Items</a>
         </div>
+        
+        <h2>Log In</h2>
+        <a class="button" href="/auth/google">Login with Google</a>
     </div>
 </body>
 </html>
