--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,7 +30,9 @@
         </div>
 
         <h2>Log In</h2>
-        <a class="button" href="/auth/google">Login with Google</a>
+        <div class="options"> 
+            <a class="lgn-button" href="/auth/google">Login with Google</a>
+        </div>
     </div>
 </body>
 </html>
